fix: deckgo-slide-split alignment

--- a/utils/deck/styles/deck/deck.scss
+++ b/utils/deck/styles/deck/deck.scss
@@ -42,27 +42,9 @@ deckgo-deck deckgo-lazy-img[slot] {
 
 /* Slide split */
 
-deckgo-slide-split > *[slot="start"],
-deckgo-slide-split > *[slot="end"] {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  word-break: break-word;
-}
-
-deckgo-slide-split[vertical] > *[slot="start"],
-deckgo-slide-split[vertical] > *[slot="end"] {
-  align-items: center;
-  text-align: center;
-}
-
-deckgo-slide-split > deckgo-highlight-code {
-  --deckgo-highlight-code-container-width: 100%;
-  --deckgo-highlight-code-container-height: 100%;
-  --deckgo-highlight-code-container-display: flex;
-  --deckgo-highlight-code-container-justify-content: center;
-  --deckgo-highlight-code-container-align-items: center;
-  --deckgo-highlight-code-container-flex-direction: column;
+deckgo-slide-split {
+  --slide-split-align: center;
+  --slide-split-text-align: center;
 }
 
 deckgo-slide-split {
